--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky",
-    "postinstall": "[ -f 'packages/prisma/src/prisma/schema.prisma' ] && prisma generate || echo 'Prisma schema does not exist'"
+    "postinstall": "[ -f 'packages/prisma/src/prisma/schema.prisma' ] && prisma generate || echo 'Prisma schema does not exist'",
+    "dev:ssr": "ng run app:serve-ssr",
+    "serve:ssr": "node dist/app/server/main.js",
+    "build:ssr": "ng build && ng run app:server",
+    "prerender": "ng run app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -15,7 +19,9 @@
     "@angular/forms": "21.0.6",
     "@angular/platform-browser": "21.0.6",
     "@angular/platform-browser-dynamic": "21.0.6",
+    "@angular/platform-server": "21.0.6",
     "@angular/router": "21.0.6",
+    "@angular/ssr": "21.0.4",
     "@aws-sdk/client-s3": "^3.958.0",
     "@aws-sdk/client-ses": "^3.958.0",
     "@aws-sdk/lib-storage": "^3.958.0",
@@ -29,6 +35,7 @@
     "@fanoutio/serve-grip": "^1.3.1",
     "@google-cloud/vision": "^5.1.0",
     "@ionic/angular": "^8.7.15",
+    "@ionic/angular-server": "^8.7.15",
     "@julianpoy/recipe-clipper": "^3.2.0",
     "@ngx-loading-bar/core": "^7.0.0",
     "@ngx-translate/core": "^16.0.4",
