chore: remove @typescript-eslint/no-unused-expressions for js files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
             "varsIgnorePattern": "^_",
             "caughtErrorsIgnorePattern": "^_"
           }
-        ]
+        ],
+        "@typescript-eslint/no-unused-expressions": 0
       }
     },
     {
