feat: centralize import logic, server health events

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fanoutio/serve-grip": "^1.3.1",
     "@google-cloud/vision": "^5.1.0",
     "@ionic/angular": "^8.6.0",
+    "@julianpoy/prisma-cursorstream": "^0.4.1",
     "@julianpoy/recipe-clipper": "^3.2.0",
     "@ngx-loading-bar/core": "^7.0.0",
     "@ngx-translate/core": "^16.0.4",
@@ -81,7 +82,7 @@
     "pg": "8.14.1",
     "pg-hstore": "^2.3.4",
     "prisma": "^6.5.0",
-    "@julianpoy/prisma-cursorstream": "^0.4.1",
+    "prom-client": "^15.1.3",
     "pug": "^3.0.3",
     "puppeteer-core": "^24.6.1",
     "sanitize-html": "^2.15.0",
