chore: enable s3-based nx cache

--- a/nx.json
+++ b/nx.json
@@ -41,5 +41,15 @@
   "useDaemonProcess": false,
   "neverConnectToCloud": true,
   "useInferencePlugins": false,
-  "defaultBase": "master"
+  "defaultBase": "master",
+  "tui": {
+    "enabled": false
+  },
+  "s3": {
+    "region": "us-east-1",
+    "bucket": "recipesage-nx-cache",
+    "forcePathStyle": true,
+    "localMode": "no-cache",
+    "ciMode": "read-write"
+  }
 }
