--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-loading-bar/core": "^7.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@nx/s3-cache": "^2.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.56.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.57.1",
     "@opentelemetry/sdk-node": "^0.57.1",
