--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ kube/secrets.yml
 
 .nx/cache
 .nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
+
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
