--- a/package.json
+++ b/package.json
@@ -124,11 +124,14 @@
     "@capacitor/cli": "7.2.0",
     "@faker-js/faker": "^9.7.0",
     "@ionic/angular-toolkit": "12.2.0",
-    "@nx/devkit": "20.3.3",
-    "@nx/eslint": "20.3.3",
-    "@nx/eslint-plugin": "20.3.3",
-    "@nx/jest": "20.3.3",
-    "@nx/js": "20.3.3",
+    "@nx/devkit": "21.2.1",
+    "@nx/eslint": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@nx/vite": "21.2.1",
+    "@nx/web": "21.2.1",
+    "@swc-node/register": "~1.9.1",
     "@swc/core": "1.11.24",
     "@swc/helpers": "0.5.17",
     "@types/cookie-parser": "^1.4.8",
@@ -150,13 +153,15 @@
     "@types/zip-stream": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
+    "@vitest/ui": "^3.2.4",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "9.29.0",
     "husky": "^9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jiti": "2.4.2",
     "lint-staged": "^16.1.0",
-    "nx": "20.3.3",
+    "nx": "21.2.1",
     "prettier": "^3.5.3",
     "regenerator-runtime": "^0.14.1",
     "sequelize-cli": "^6.6.2",
@@ -167,6 +172,8 @@
     "ts-node": "~10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "5.8.3",
+    "vite": "^6.0.0",
+    "vitest": "^3.2.4",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1",
     "workbox-cli": "^7.0.0"
