--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -5,5 +5,14 @@
     "module": "commonjs",
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts"]
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
