--- a/packages/util/shared/tsconfig.json
+++ b/packages/util/shared/tsconfig.json
@@ -1,8 +1,16 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "strict": false,
-    "outDir": "./dist"
+    "strict": false
   },
-  "include": ["src/**/*.ts"]
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
