--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sentry/profiling-node": "^9.30.0",
     "@trpc/client": "^11.4.2",
     "@trpc/server": "^11.0.2",
+    "@types/jsdom": "^21.1.7",
     "axios": "^1.8.4",
     "body-parser": "~2.2.0",
     "commander": "13.1.0",
@@ -122,15 +123,18 @@
     "@angular/language-service": "19.2.12",
     "@babel/preset-env": "^7.27.1",
     "@capacitor/cli": "7.2.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.0",
     "@faker-js/faker": "^9.7.0",
     "@ionic/angular-toolkit": "12.2.0",
     "@nx/devkit": "21.2.1",
+    "@nx/esbuild": "^21.2.1",
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
     "@nx/js": "21.2.1",
     "@nx/vite": "21.2.1",
     "@nx/web": "21.2.1",
+    "@sentry/esbuild-plugin": "^3.5.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "1.11.24",
     "@swc/helpers": "0.5.17",
@@ -138,7 +142,6 @@
     "@types/cors": "^2.8.17",
     "@types/dom-screen-wake-lock": "^1.0.3",
     "@types/he": "^1.2.3",
-    "@types/jest": "29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
     "@types/node": "22.14.0",
@@ -151,14 +154,14 @@
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.2",
     "@types/zip-stream": "^7.0.0",
-    "@typescript-eslint/eslint-plugin": "8.34.1",
-    "@typescript-eslint/parser": "8.34.1",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/eslint-plugin": "^1.3.3",
     "@vitest/ui": "^3.2.4",
+    "ajv": "^8.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "9.29.0",
+    "eslint-config-prettier": "^10.0.0",
     "husky": "^9.1.7",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "jiti": "2.4.2",
     "lint-staged": "^16.1.0",
     "nx": "21.2.1",
@@ -167,12 +170,13 @@
     "sequelize-cli": "^6.6.2",
     "sinon": "^20.0.0",
     "supertest": "7.1.0",
-    "ts-jest": "29.3.1",
     "ts-loader": "^9.5.2",
     "ts-node": "~10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "5.8.3",
+    "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.2.4",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1",
