--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
     "@nx/js": "21.2.1",
+    "@nx/s3-cache": "^3.0.0",
     "@nx/vite": "21.2.1",
     "@nx/web": "21.2.1",
     "@sentry/esbuild-plugin": "^3.5.0",
