--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ jobs:
       - install-dependencies
       - run:
           name: build-frontend
-          command: (export APP_VERSION=${CIRCLE_TAG:=stg} && npx nx build frontend)
+          command: (export APP_VERSION=${CIRCLE_TAG:=stg} && npx nx build frontend --skip-nx-cache)
           environment:
             ENVIRONMENT: production
       - run:
@@ -143,7 +143,7 @@ jobs:
       - install-dependencies
       - run:
           name: build-frontend
-          command: (export APP_VERSION=${CIRCLE_TAG:=stg} && npx nx build:selfhost frontend)
+          command: (export APP_VERSION=${CIRCLE_TAG:=stg} && npx nx build:selfhost frontend --skip-nx-cache)
           environment:
             ENVIRONMENT: production
       - run:
