--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,9 @@ services:
   ingredient-instruction-classifier:
     image: julianpoy/ingredient-instruction-classifier:1.4.9
     stop_grace_period: 1s
-
+  collector:
+    image: otel/opentelemetry-collector:latest
+    ports:
+      - "4318:4318"
 volumes:
   typesense-data:
