label-and-order-meals: Show meal options in plan. Move meal options to config.

--- a/packages/frontend/ngx-translate-lint.config.json
+++ b/packages/frontend/ngx-translate-lint.config.json
@@ -1,6 +1,6 @@
 {
   "rules": {
-    "keysOnViews": "error",
+    "keysOnViews": "warning",
     "zombieKeys": "warning",
     "misprint": "warning",
     "maxWarning": "0",
