--- a/packages/frontend/ngx-translate-lint.config.json
+++ b/packages/frontend/ngx-translate-lint.config.json
@@ -5,7 +5,13 @@
     "misprint": "warning",
     "maxWarning": "0",
     "misprintCoefficient": "0.9",
-    "ignoredKeys": [],
+    "ignoredKeys": [
+      "pages.export.jobs.status.fail.unknown",
+      "pages.settings.mealOptions.*",
+      "components.selectCollaborators.*",
+      
+      "components.signInWithGoogle.button"
+    ],
     "ignoredMisprintKeys": [],
     "ast": {
       "isNgsTranslateImported": "error"
