--- a/packages/frontend/ngx-translate-lint.config.json
+++ b/packages/frontend/ngx-translate-lint.config.json
@@ -9,6 +9,7 @@
       "pages.export.jobs.status.fail.unknown",
       "pages.settings.mealOptions.*",
       "components.selectCollaborators.*",
+      "components.mealCalendar.*",
 
       "components.signInWithGoogle.button"
     ],
