--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/semantic-conventions": "^1.30.0",
     "@prisma/client": "^6.12.0",
     "@prisma/instrumentation": "^6.12.0",
+    "@sentry/angular": "^10.17.0",
     "@sentry/browser": "^9.42.1",
     "@sentry/node": "^9.42.1",
     "@sentry/profiling-node": "^9.42.1",
