--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.1.2",
-    "@angular/core": "20.1.2",
-    "@angular/forms": "20.1.2",
-    "@angular/platform-browser": "20.1.2",
-    "@angular/platform-browser-dynamic": "20.1.2",
-    "@angular/router": "20.1.2",
+    "@angular/common": "20.3.7",
+    "@angular/core": "20.3.7",
+    "@angular/forms": "20.3.7",
+    "@angular/platform-browser": "20.3.7",
+    "@angular/platform-browser-dynamic": "20.3.7",
+    "@angular/router": "20.3.7",
     "@aws-sdk/client-s3": "^3.855.0",
     "@aws-sdk/client-ses": "^3.855.0",
     "@aws-sdk/lib-storage": "^3.855.0",
@@ -109,33 +109,33 @@
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.2001.1",
-    "@angular-devkit/build-angular": "20.1.1",
-    "@angular-devkit/core": "20.1.1",
-    "@angular-devkit/schematics": "20.1.1",
-    "@angular-eslint/builder": "20.1.1",
-    "@angular-eslint/eslint-plugin": "20.1.1",
-    "@angular-eslint/eslint-plugin-template": "20.1.1",
-    "@angular-eslint/schematics": "20.1.1",
-    "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "20.1.1",
-    "@angular/compiler": "20.1.2",
-    "@angular/compiler-cli": "20.1.2",
-    "@angular/language-service": "20.1.2",
+    "@angular-devkit/architect": "0.2003.7",
+    "@angular-devkit/build-angular": "20.3.7",
+    "@angular-devkit/core": "20.3.7",
+    "@angular-devkit/schematics": "20.3.7",
+    "@angular-eslint/builder": "20.4.0",
+    "@angular-eslint/eslint-plugin": "20.4.0",
+    "@angular-eslint/eslint-plugin-template": "20.4.0",
+    "@angular-eslint/schematics": "20.4.0",
+    "@angular-eslint/template-parser": "20.4.0",
+    "@angular/cli": "20.3.7",
+    "@angular/compiler": "20.3.7",
+    "@angular/compiler-cli": "20.3.7",
+    "@angular/language-service": "20.3.7",
     "@babel/preset-env": "^7.27.1",
     "@capacitor/cli": "7.4.2",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.0",
     "@faker-js/faker": "^9.7.0",
     "@ionic/angular-toolkit": "12.3.0",
-    "@nx/devkit": "21.2.1",
-    "@nx/esbuild": "^21.2.1",
-    "@nx/eslint": "21.2.1",
-    "@nx/eslint-plugin": "21.2.1",
-    "@nx/js": "21.2.1",
+    "@nx/devkit": "22.0.1",
+    "@nx/esbuild": "22.0.1",
+    "@nx/eslint": "22.0.1",
+    "@nx/eslint-plugin": "22.0.1",
+    "@nx/js": "22.0.1",
     "@nx/s3-cache": "^3.0.0",
-    "@nx/vite": "21.2.1",
-    "@nx/web": "21.2.1",
+    "@nx/vite": "22.0.1",
+    "@nx/web": "22.0.1",
     "@sentry/esbuild-plugin": "^4.5.0",
     "@swc-node/register": "~1.11.1",
     "@swc/core": "1.13.5",
@@ -163,10 +163,11 @@
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "9.36.0",
     "eslint-config-prettier": "^10.0.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jiti": "2.4.2",
     "lint-staged": "^16.1.0",
-    "nx": "21.2.1",
+    "nx": "22.0.1",
     "prettier": "^3.5.3",
     "regenerator-runtime": "^0.14.1",
     "sequelize-cli": "^6.6.2",
@@ -175,9 +176,9 @@
     "ts-loader": "^9.5.2",
     "ts-node": "~10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.0.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2",
+    "vite": "7.1.9",
     "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.2.4",
     "webpack": "^5.99.7",
