--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@fanoutio/serve-grip": "^1.3.1",
     "@google-cloud/vision": "^5.1.0",
     "@ionic/angular": "^8.7.4",
-    "@julianpoy/prisma-cursorstream": "^0.4.2",
     "@julianpoy/recipe-clipper": "^3.2.0",
     "@ngx-loading-bar/core": "^7.0.0",
     "@ngx-translate/core": "^16.0.4",
@@ -84,6 +83,7 @@
     "pg": "8.14.1",
     "pg-hstore": "^2.3.4",
     "prisma": "^6.18.0",
+    "prisma-cursorstream": "^0.4.1",
     "prom-client": "^15.1.3",
     "pug": "^3.0.3",
     "puppeteer-core": "^24.6.1",
