--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@trpc/client": "^11.5.1",
     "@trpc/server": "^11.0.2",
     "@types/jsdom": "^21.1.7",
+    "ahocorasick": "^1.0.2",
     "axios": "^1.8.4",
     "body-parser": "~2.2.0",
     "commander": "14.0.1",
@@ -140,6 +141,7 @@
     "@swc-node/register": "~1.11.1",
     "@swc/core": "1.13.5",
     "@swc/helpers": "0.5.17",
+    "@types/ahocorasick": "^1.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/dom-screen-wake-lock": "^1.0.3",
