--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "ngx-ui-scroll": "^4.0.0",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "openai": "^5.10.2",
+    "openai": "v6.7.0",
     "p-debounce": "^4.0.0",
     "p-limit": "^6.2.0",
     "p-throttle": "^7.0.0",
