--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - ./.credentials:/app/.credentials
     ports:
       - "3000:3000"
-    command: ./scripts/watchandrun.sh 'node node_modules/ts-node/dist/bin.js --swc --project packages/backend/tsconfig.json -r packages/backend/src/tracing.ts packages/backend/src/bin/www.ts' ./packages/backend ./packages/trpc ./packages/util ./packages/express ./packages/prisma
+    command: ./scripts/watchandrun.sh 'node node_modules/ts-node/dist/bin.js --swc --project packages/backend/tsconfig.json packages/backend/src/bin/www.ts' ./packages/backend ./packages/trpc ./packages/util ./packages/express ./packages/prisma
     environment:
       - AWS_REGION=us-west-2
       - AWS_BUCKET_RECIPE_IMAGE=chefbook-dev
@@ -62,7 +62,6 @@ services:
       - POSTGRES_LOGGING=true
       - DATABASE_URL=postgresql://recipesage_dev:recipesage_dev@postgres:5432/recipesage_dev
       - GCM_KEYPAIR
-      - SENTRY_SAMPLE_RATE=0
       - GRIP_URL=http://pushpin:5561/
       - GRIP_KEY=changeme
       - SEARCH_PROVIDER=typesense
