--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "@nx/vite": "22.0.1",
     "@nx/web": "22.0.1",
     "@sentry/esbuild-plugin": "^4.6.0",
+    "@sentry/webpack-plugin": "^4.6.0",
     "@swc-node/register": "~1.11.1",
     "@swc/core": "1.15.0",
     "@swc/helpers": "0.5.17",
