feat: switch to vercel ai to replace openai

--- a/example.env
+++ b/example.env
@@ -1,8 +1,16 @@
 AWS_ACCESS_KEY_ID=KEY
 AWS_SECRET_ACCESS_KEY=KEY
+
 STRIPE_SK=KEY
 STRIPE_WEBHOOK_SECRET=KEY
+
 SENTRY_DSN=VAL
+
+AI_PROVIDER=openai
+AI_MODEL_HIGH=gpt-5
+AI_MODEL_LOW=gpt-5-mini
+AI_MODEL_OCR=gpt-5-mini
 OPENAI_API_KEY=VAL
+
 GOOGLE_GSI_CLIENT_ID=VAL
 GOOGLE_GSI_CLIENT_SECRET=VAL
