chore: update prettier to recognize angular control flow

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,10 @@
-{}
+{
+  "overrides": [
+    {
+      "files": "packages/frontend/**/*.html",
+      "options": {
+        "parser": "angular"
+      }
+    }
+  ]
+}
