fix: build errors with angular 21

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2021",
-    "outDir": "./dist/out-tsc"
+    "outDir": "./dist/out-tsc",
+    "moduleResolution": "bundler"
   },
   "angularCompilerOptions": {
     "strictTemplates": true,
