chore: update nx to latest

--- a/nx.json
+++ b/nx.json
@@ -20,13 +20,13 @@
       "inputs": ["default", "{workspaceRoot}/eslint.config.mjs"],
       "cache": true
     },
-    "@nx/vite:test": {
-      "cache": true,
-      "inputs": ["default", "^default"]
-    },
     "@nx/vite:build": {
       "cache": true,
       "dependsOn": ["^build"],
+      "inputs": ["default", "^default"]
+    },
+    "@nx/vitest:test": {
+      "cache": true,
       "inputs": ["default", "^default"]
     }
   },
