--- a/packages/trpc/project.json
+++ b/packages/trpc/project.json
@@ -46,7 +46,7 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
         "reportsDirectory": "../../coverage/packages/trpc"
