--- a/package.json
+++ b/package.json
@@ -129,14 +129,15 @@
     "@eslint/js": "^9.30.0",
     "@faker-js/faker": "^9.7.0",
     "@ionic/angular-toolkit": "12.3.0",
-    "@nx/devkit": "22.0.1",
-    "@nx/esbuild": "22.0.1",
-    "@nx/eslint": "22.0.1",
-    "@nx/eslint-plugin": "22.0.1",
-    "@nx/js": "22.0.1",
+    "@nx/devkit": "22.3.3",
+    "@nx/esbuild": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/js": "22.3.3",
     "@nx/s3-cache": "^5.0.0",
-    "@nx/vite": "22.0.1",
-    "@nx/web": "22.0.1",
+    "@nx/vite": "22.3.3",
+    "@nx/vitest": "22.3.3",
+    "@nx/web": "22.3.3",
     "@sentry/esbuild-plugin": "^4.6.1",
     "@sentry/webpack-plugin": "^4.6.1",
     "@swc-node/register": "~1.11.1",
@@ -159,9 +160,9 @@
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.2",
     "@types/zip-stream": "^7.0.0",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/coverage-v8": "4.0.9",
     "@vitest/eslint-plugin": "^1.3.3",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/ui": "4.0.9",
     "ajv": "^8.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "9.39.2",
@@ -170,7 +171,7 @@
     "husky": "^9.1.7",
     "jiti": "2.6.1",
     "lint-staged": "^16.2.7",
-    "nx": "22.0.1",
+    "nx": "22.3.3",
     "prettier": "^3.5.3",
     "regenerator-runtime": "^0.14.1",
     "sequelize-cli": "^6.6.2",
@@ -183,7 +184,7 @@
     "typescript-eslint": "8.46.2",
     "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.0",
-    "vitest": "^3.2.4",
+    "vitest": "4.0.9",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "workbox-cli": "^7.4.0"
