--- a/packages/backend/project.json
+++ b/packages/backend/project.json
@@ -47,7 +47,7 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
         "reportsDirectory": "../../coverage/packages/backend"
