chore: add support for gemini

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "private": true,
   "dependencies": {
-    "@ai-sdk/anthropic": "^3.0.0-beta.71",
-    "@ai-sdk/openai": "^3.0.0-beta.81",
+    "@ai-sdk/anthropic": "^3.0.1",
+    "@ai-sdk/google": "^3.0.1",
+    "@ai-sdk/openai": "^3.0.1",
     "@angular/common": "21.0.6",
     "@angular/core": "21.0.6",
     "@angular/forms": "21.0.6",
@@ -44,7 +45,7 @@
     "@types/jsdom": "^21.1.7",
     "accept-language": "^3.0.20",
     "ahocorasick": "^1.0.2",
-    "ai": "^6.0.0-beta.130",
+    "ai": "^6.0.3",
     "axios": "^1.8.4",
     "body-parser": "~2.2.1",
     "commander": "14.0.1",
