--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,6 +37,7 @@
         "packages/util/server/src/storage/index.ts"
       ],
       "@recipesage/util/shared": ["packages/util/shared/src/index.ts"],
+      "@recipesage/queue-worker": ["packages/queue-worker/src/index.ts"],
       "~/*": ["packages/frontend/src/app/*"]
     }
   },
