--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ai": "^6.0.3",
     "axios": "^1.8.4",
     "body-parser": "~2.2.1",
+    "bullmq": "^5.66.4",
     "cheerio": "^1.1.2",
     "commander": "14.0.1",
     "cookie-parser": "^1.4.7",
